# similarpic-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download_clip_processor.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: routes_category.py  routes_health.py  routes_recommend.py  routes_style.py
app/core/: __init__.py  config.py  lifespan.py
app/ml/: __init__.py  classifier.py  clip_encoder.py  recommender.py  transforms.py
app/schemas/: classify.py  common.py  recommend.py
app/services/: image_service.py  metadata_service.py
tests/api/: test_health.py
